--- a/package.json
+++ b/package.json
@@ -24,12 +24,10 @@
   },
   "homepage": "https://github.com/nodejs-projects-kenanhancer/typescript-usage-demo#readme",
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "tslint": "^6.1.2",
+    "@types/node": "^17.0.18",
+    "nodemon": "^2.0.15",
+    "tslint": "^5.20.1",
     "tslint-config-standard": "^9.0.0",
-    "typescript": "^3.9.5"
-  },
-  "dependencies": {
-    "@types/node": "^14.0.11"
+    "typescript": "^4.5.5"
   }
 }
