--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-demo1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/demo1/app5.ts",
+    "watch-demo1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/TS_and_ESM/conditional-types/app37.ts",
     "build": "tsc",
     "build-with-config": "tsc --build tsconfig.json",
     "prebuild": "npm run lint",
@@ -25,9 +25,15 @@
   "homepage": "https://github.com/nodejs-projects-kenanhancer/typescript-usage-demo#readme",
   "devDependencies": {
     "@types/node": "^17.0.18",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
     "tslint": "^5.20.1",
     "tslint-config-standard": "^9.0.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "nut-persister": "^1.0.4",
+    "uuid": "^8.3.2"
   }
 }
