--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/nodejs-projects-kenanhancer/typescript-usage-demo#readme",
   "devDependencies": {
+    "@azure/functions": "^3.0.0",
+    "@types/aws-lambda": "^8.10.95",
     "@types/node": "^17.0.18",
     "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
