--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TypeScript usage with CommonJS(CJS) and ECMAScript Modules(ESM)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --no-cache ",
+    "test:coverage": "jest --no-cache --coverage",
     "watch-demo1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/TS_and_ESM/conditional-types/app55.ts",
     "build": "tsc",
     "build-with-config": "tsc --build tsconfig.json",
@@ -26,13 +27,16 @@
   "devDependencies": {
     "@azure/functions": "^3.0.0",
     "@types/aws-lambda": "^8.10.95",
+    "@types/jest": "^28.1.7",
     "@types/node": "^17.0.18",
     "@types/uuid": "^8.3.4",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.15",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.7.0",
     "tslint": "^5.20.1",
     "tslint-config-standard": "^9.0.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "nut-persister": "^1.0.4",
