--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "build-with-config": "tsc --build tsconfig.json",
     "prebuild": "npm run lint",
-    "lint": "tslint --fix --format stylish src/**/*.ts",
+    "lint": "eslint --ext .js,.ts .",
     "create-tsconfig": "tsc --init"
   },
   "repository": {
@@ -30,12 +30,13 @@
     "@types/jest": "^28.1.7",
     "@types/node": "^17.0.18",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "eslint": "^8.24.0",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.7.0",
-    "tslint": "^5.20.1",
-    "tslint-config-standard": "^9.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
