--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --no-cache ",
     "test:coverage": "jest --no-cache --coverage",
-    "watch-demo1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/TS_and_ESM/demo1/app24-4.ts",
+    "watch-demo1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/TS_and_ESM/ioc-container-demo1/index.ts",
     "build": "tsc",
     "build-with-config": "tsc --build tsconfig.json",
     "prebuild": "npm run lint",
@@ -42,6 +42,7 @@
   "dependencies": {
     "nut-persister": "^1.0.4",
     "nut-pipe": "^1.3.7",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2"
   }
 }
