--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --no-cache ",
     "test:coverage": "jest --no-cache --coverage",
-    "watch-demo1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/TS_and_ESM/ioc-container-demo3/index.ts",
+    "start": "node dist/TS_and_ESM/ioc-container-demo3/index.js",
+    "watch-demo1": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/TS_and_ESM/ioc-container-demo4/index.ts",
     "build": "tsc",
     "build-with-config": "tsc --build tsconfig.json",
     "prebuild": "npm run lint",
