--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/nodejs-projects-kenanhancer/typescript-usage-demo#readme",
   "devDependencies": {
-    "@azure/functions": "^3.0.0",
-    "@types/aws-lambda": "^8.10.95",
-    "@types/jest": "^28.1.7",
-    "@types/node": "^17.0.18",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
-    "eslint": "^8.24.0",
-    "jest": "^28.1.3",
-    "nodemon": "^2.0.19",
-    "ts-jest": "^28.0.8",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.9.4"
+    "@azure/functions": "^3.5.0",
+    "@types/aws-lambda": "^8.10.110",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "jest": "^29.4.1",
+    "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0-beta"
   },
   "dependencies": {
     "nut-persister": "^1.0.4",
