--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "javascript.inlayHints.functionLikeReturnTypes.enabled": false
+    "javascript.inlayHints.functionLikeReturnTypes.enabled": false,
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
